# ChangeLog for app-emulation/wine
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.37 2003/04/12 17:30:35 phoenix Exp $

*wine-20020411 (11 Apr 2003)

  12 Apr 2002; Tilman Klar <phoenix@gentoo.org> wine-20020411.ebuild :
  Tagged this version stable ("x86"). Added support for USE="nptl".

  11 Apr 2002; Tilman Klar <phoenix@gentoo.org> wine-20020411.ebuild,
  files/digest-wine-20020411, files/wine-20020411-* :
  Added new version of wine (cvs snapshot). This version works with the
  new binutils-2.13.90.0.20.

*wine-* (11 Apr 2003)

  11 Apr 2002; Tilman Klar <phoenix@gentoo.org> wine-2002*,
  files/digest-wine-2002*, files/wine-2002* :
  Removed all wine versions prior to Jan 2003 from the tree.

  11 Apr 2002; Tilman Klar <phoenix@gentoo.org> wine-20030115.ebuild,
  wine-20030219.ebuild, wine-20030318.ebuild,  wine-20030408.ebuild :
  Updated DEPEND. There were major problems with the new version of
  binutils, that's why i made wine depend on <=binutils-2.13.90.0.18-r1.
  For further information check bug #19106.

*wine-20030318 (10 Apr 2003)

  10 Apr 2003; Tilman Klar <phoenix@gentoo.org> wine-20030318.ebuild,
  files/digest-wine-20030318 :
  Version bump. This should fix the glibc-2.3.2 problems.

*wine-20030318 (06 Apr 2003)

  06 Apr 2003; Tilman Klar <phoenix@gentoo.org> wine-20030318.ebuild,
  files/digest-wine-20030318 :
  Version bump.

*wine-* (01 Apr 2003)

  01 Apr 2003; phoen][x <phoenix@gentoo.org> *.ebuild :
  Replaced 'export C{XX}FLAGS=""' with 'unset CFLAGS CXXFLAGS'.
  Read bug #17986 for additional information about this.

*wine-20030219 (27 Feb 2003)

  27 Feb 2003; Stefan Jones <cretin@gentoo.org> wine-20030219.ebuild:
  New version. Added tcltk use flag.

*wine-20030115 (19 Jan 2003)

  05 Feb 2003; phoen][x <phoenix@gentoo.org> wine-20030115.ebuild:
  Modified X dependencies. You can build wine without X now (for commandline