@@ -1,8 +1,8 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/Attic/wine-20030411.ebuild,v 1.3 2003/04/12 17:30:35 phoenix Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/Attic/wine-20030411.ebuild,v 1.4 2003/04/15 07:18:33 cretin Exp $
 
-inherit eutils base
+inherit eutils base flag-o-matic
 
 DESCRIPTION="free implementation of Windows(tm) on Unix - CVS snapshot"
 SRC_URI="mirror://gentoo/wine-${PV}.tar.bz2"
@@ -26,6 +26,8 @@ DEPEND="sys-devel/gcc
 	cups? ( net-print/cups )
 	opengl? ( virtual/opengl )"
 
+strip-flags
+
 src_unpack() {
 	base_src_unpack
 	cd ${S}
@@ -41,9 +43,6 @@ src_compile() {
 
 	[ -z $DEBUG ] && myconf="$myconf --disable-trace --disable-debug" || myconf="$myconf --enable-trace --enable-debug"
 	# there's no configure flag for cups, arts, alsa and nas, it's supposed to be autodetected
-	
-	# use the default setting in ./configure over the /etc/make.conf setting
-	unset CFLAGS CXXFLAGS
 	
 	./configure --prefix=/usr/lib/wine \
 		--sysconfdir=/etc/wine \
